[gd_scene load_steps=43 format=2]

[ext_resource path="res://Scenes/Level/Sluice.gd" type="Script" id=1]
[ext_resource path="res://TileMaps/TileMapTutorial_Boden.tres" type="TileSet" id=2]
[ext_resource path="res://TileMaps/TileMapTutorial.tres" type="TileSet" id=3]
[ext_resource path="res://Assets/Level/Lock/Door/LockDoor_New/LockDoor0022.png" type="Texture" id=4]
[ext_resource path="res://Assets/Level/Lock/Door/LockDoor_New/LockDoor0027.png" type="Texture" id=5]
[ext_resource path="res://Assets/Level/Lock/Door/LockDoor_New/LockDoor0023.png" type="Texture" id=6]
[ext_resource path="res://Assets/Level/Lock/Door/LockDoor_New/LockDoor0018.png" type="Texture" id=7]
[ext_resource path="res://Assets/Level/Lock/Door/LockDoor_New/LockDoor0017.png" type="Texture" id=8]
[ext_resource path="res://Assets/Level/Lock/Door/LockDoor_New/LockDoor0024.png" type="Texture" id=9]
[ext_resource path="res://Assets/Level/Lock/Door/LockDoor_New/LockDoor0009.png" type="Texture" id=10]
[ext_resource path="res://Assets/Level/Lock/Door/LockDoor_New/LockDoor0015.png" type="Texture" id=11]
[ext_resource path="res://Assets/Level/Lock/Door/LockDoor_New/LockDoor0029.png" type="Texture" id=12]
[ext_resource path="res://Assets/Level/Lock/Door/LockDoor_New/LockDoor0026.png" type="Texture" id=13]
[ext_resource path="res://Assets/Level/Lock/Door/LockDoor_New/LockDoor0030.png" type="Texture" id=14]
[ext_resource path="res://Assets/Level/Lock/Door/LockDoor_New/LockDoor0002.png" type="Texture" id=15]
[ext_resource path="res://Assets/Level/Lock/Door/LockDoor_New/LockDoor0016.png" type="Texture" id=16]
[ext_resource path="res://Assets/Level/Lock/Door/LockDoor_New/LockDoor0010.png" type="Texture" id=17]
[ext_resource path="res://Assets/Level/Lock/Door/LockDoor_New/LockDoor0014.png" type="Texture" id=18]
[ext_resource path="res://Assets/Level/Lock/Door/LockDoor_New/LockDoor0000.png" type="Texture" id=19]
[ext_resource path="res://Assets/Level/Lock/Door/LockDoor_New/LockDoor0001.png" type="Texture" id=20]
[ext_resource path="res://Assets/Level/Lock/Door/LockDoor_New/LockDoor0005.png" type="Texture" id=21]
[ext_resource path="res://Assets/Level/Lock/Door/LockDoor_New/LockDoor0028.png" type="Texture" id=22]
[ext_resource path="res://Assets/Level/Lock/Door/LockDoor_New/LockDoor0013.png" type="Texture" id=23]
[ext_resource path="res://Assets/Level/Lock/Door/LockDoor_New/LockDoor0020.png" type="Texture" id=24]
[ext_resource path="res://Assets/Level/Lock/Door/LockDoor_New/LockDoor0025.png" type="Texture" id=25]
[ext_resource path="res://Assets/Level/Lock/Door/LockDoor_New/LockDoor0007.png" type="Texture" id=26]
[ext_resource path="res://Assets/Level/Lock/Door/LockDoor_New/LockDoor0012.png" type="Texture" id=27]
[ext_resource path="res://Assets/Level/Lock/Door/LockDoor_New/LockDoor0011.png" type="Texture" id=28]
[ext_resource path="res://Assets/Level/Lock/Door/LockDoor_New/LockDoor0008.png" type="Texture" id=29]
[ext_resource path="res://Assets/Level/Lock/Door/LockDoor_New/LockDoor0019.png" type="Texture" id=30]
[ext_resource path="res://Assets/Level/Lock/Door/LockDoor_New/LockDoor0006.png" type="Texture" id=31]
[ext_resource path="res://Assets/Level/Lock/Door/LockDoor_New/LockDoor0004.png" type="Texture" id=32]
[ext_resource path="res://Assets/Level/Lock/Door/LockDoor_New/LockDoor0021.png" type="Texture" id=33]
[ext_resource path="res://Assets/Level/Lock/Door/LockDoor_New/LockDoor0003.png" type="Texture" id=34]
[ext_resource path="res://Scenes/Level/SluiceDoor.gd" type="Script" id=56]
[ext_resource path="res://TileMaps/Shadow_tileset.tres" type="TileSet" id=57]
[ext_resource path="res://Assets/Level/Floor/Imperfections/Gradients/Gradient_IV.png" type="Texture" id=58]

[sub_resource type="SpriteFrames" id=5]
resource_local_to_scene = true
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 15 ), ExtResource( 34 ), ExtResource( 32 ), ExtResource( 21 ), ExtResource( 31 ), ExtResource( 26 ), ExtResource( 29 ), ExtResource( 10 ), ExtResource( 17 ), ExtResource( 28 ), ExtResource( 27 ), ExtResource( 23 ), ExtResource( 18 ), ExtResource( 11 ), ExtResource( 16 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 30 ), ExtResource( 24 ), ExtResource( 33 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 25 ), ExtResource( 13 ), ExtResource( 5 ), ExtResource( 22 ), ExtResource( 12 ), ExtResource( 14 ) ],
"loop": true,
"name": "Close",
"speed": 60.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "Closed",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 12 ), ExtResource( 22 ), ExtResource( 5 ), ExtResource( 13 ), ExtResource( 25 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 33 ), ExtResource( 24 ), ExtResource( 30 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 16 ), ExtResource( 11 ), ExtResource( 18 ), ExtResource( 23 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 17 ), ExtResource( 29 ), ExtResource( 10 ), ExtResource( 26 ), ExtResource( 31 ), ExtResource( 21 ), ExtResource( 32 ), ExtResource( 34 ), ExtResource( 15 ), ExtResource( 20 ), ExtResource( 19 ) ],
"loop": true,
"name": "Open",
"speed": 60.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "Opened",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 23.1465, 585.061 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 137 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 94.5 )

[sub_resource type="CanvasItemMaterial" id=8]
blend_mode = 3

[node name="Sluice" type="YSort"]
script = ExtResource( 1 )

[node name="GroundTIleMap" type="TileMap" parent="."]
scale = Vector2( 0.05, 0.05 )
z_index = -5
tile_set = ExtResource( 2 )
cell_size = Vector2( 1280, 896 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( -65539, 536870914, 0, -65538, 536870914, 0, -65537, 536870914, 0, -131072, 536870914, 0, -131071, 536870914, 0, -131070, 536870914, 0, -3, 2, 0, -2, 2, 0, -1, 2, 0, -65536, 2, 0, -65535, 2, 0, -65534, 2, 0, 65533, 2, 0, 65534, 2, 0, 65535, 2, 0, 0, 2, 0, 1, 2, 0, 2, 2, 0, 131069, 536870914, 0, 131070, 536870914, 0, 131071, 536870914, 0, 65536, 536870914, 0, 65537, 536870914, 0, 65538, 536870914, 0 )

[node name="Shadow1" type="TileMap" parent="."]
scale = Vector2( 0.1, 0.1 )
tile_set = ExtResource( 57 )
cell_size = Vector2( 320, 320 )
cell_y_sort = true
format = 1
tile_data = PoolIntArray( -9893762, 0, 0, -131078, 1, 0, -131077, 1, 0, -131076, 1, 0, -131075, 1, 0, -131074, 1, 0, -131073, 1, 0, -196608, 1, 0, -196607, 1, 0, -196606, 1, 0, -196605, 1, 0, -196604, 1, 0, -196603, 1, 0, 131066, 4, 0, 131067, 4, 0, 131068, 4, 0, 131069, 4, 0, 131070, 4, 0, 131071, 4, 0, 65536, 4, 0, 65537, 4, 0, 65538, 4, 0, 65539, 4, 0, 65540, 4, 0, 65541, 4, 0 )

[node name="Walls" type="TileMap" parent="."]
scale = Vector2( 0.1, 0.1 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 640, 640 )
cell_tile_origin = 2
cell_y_sort = true
collision_layer = 4
collision_mask = 5
format = 1
tile_data = PoolIntArray( -131075, 10, 0, -131073, 10, 0, -196607, 10, 0, -65539, 18, 0, -65537, 18, 0, -131071, 18, 0, 131069, 3, 0, 131071, 3, 0, 65537, 3, 0 )

[node name="Doors" type="Node2D" parent="."]

[node name="Right" type="AnimatedSprite" parent="Doors"]
position = Vector2( 187, 4.75 )
scale = Vector2( 0.216016, 0.184766 )
frames = SubResource( 5 )
animation = "Closed"
script = ExtResource( 56 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="Doors/Right"]
position = Vector2( -944.376, 96.3211 )
scale = Vector2( 4.62929, 5.70792 )
collision_layer = 4
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/Right/KinematicBody2D"]
position = Vector2( 204, -21.375 )
scale = Vector2( 0.216016, 0.175195 )
shape = SubResource( 7 )

[node name="Left" type="AnimatedSprite" parent="Doors"]
position = Vector2( -187, 5 )
scale = Vector2( 0.216016, 0.185156 )
frames = SubResource( 5 )
animation = "Closed"
script = ExtResource( 56 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="Doors/Left"]
position = Vector2( -944.376, 97.0346 )
scale = Vector2( 4.62929, 5.70792 )
collision_layer = 4
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/Left/KinematicBody2D"]
position = Vector2( 204, -21.375 )
scale = Vector2( 0.216016, 0.175195 )
shape = SubResource( 7 )

[node name="Areas" type="Node2D" parent="."]

[node name="LeftDoorCloseTrigger" type="Area2D" parent="Areas"]
position = Vector2( -164, 3 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/LeftDoorCloseTrigger"]
position = Vector2( 0, 3.5 )
shape = SubResource( 3 )

[node name="RightDoorCloseTrigger" type="Area2D" parent="Areas"]
position = Vector2( 255, -1 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/RightDoorCloseTrigger"]
position = Vector2( 0, 4 )
shape = SubResource( 3 )

[node name="LevelSwitchTrigger" type="Area2D" parent="Areas"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/LevelSwitchTrigger"]
position = Vector2( -1, 4.5 )
shape = SubResource( 4 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 0, 162 )
scale = Vector2( 5.98438, 3.51563 )

[node name="GradientIv" type="Sprite" parent="Node2D"]
material = SubResource( 8 )
position = Vector2( -1.05798e-06, -55.8222 )
scale = Vector2( 1.00261, 1.17111 )
texture = ExtResource( 58 )

[connection signal="animation_finished" from="Doors/Right" to="Doors/Right" method="OnAnimationFinished"]
[connection signal="animation_finished" from="Doors/Left" to="Doors/Left" method="OnAnimationFinished"]
[connection signal="body_entered" from="Areas/LeftDoorCloseTrigger" to="." method="_on_LeftDoorCloseTrigger_body_entered"]
[connection signal="body_entered" from="Areas/RightDoorCloseTrigger" to="." method="_on_RightDoorCloseTrigger_body_entered"]
[connection signal="body_entered" from="Areas/LevelSwitchTrigger" to="." method="_on_LevelSwitchTrigger_body_entered"]
